// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots max date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-5"
      id="test-5-label"
    >
      test-5
    </label>
    <div
      class="usa-hint"
      id="test-5-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker usa-date-picker--initialized"
      data-max-date="2020-05-05"
      data-min-date="0000-01-01"
    >
      <input
        aria-describedby="test-5-hint"
        aria-hidden="true"
        aria-labelledby="test-5-label"
        class="usa-input usa-date-picker__internal-input"
        style="display: none;"
        tabindex="-1"
      />
      <div
        class="usa-date-picker__wrapper"
      >
        <input
          aria-describedby="test-5-hint"
          aria-labelledby="test-5-label"
          class="usa-input usa-date-picker__external-input"
          id="test-5"
          name="test-5"
          type="text"
        />
        
    
        <button
          aria-haspopup="true"
          aria-label="Toggle calendar"
          class="usa-date-picker__button"
          type="button"
        />
        
    
        <div
          aria-modal="true"
          class="usa-date-picker__calendar"
          hidden=""
          role="dialog"
        />
        
    
        <div
          aria-live="polite"
          class="usa-sr-only usa-date-picker__status"
          role="status"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots min date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-6"
      id="test-6-label"
    >
      test-6
    </label>
    <div
      class="usa-hint"
      id="test-6-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker usa-date-picker--initialized"
      data-max-date="false"
      data-min-date="2020-05-05"
    >
      <input
        aria-describedby="test-6-hint"
        aria-hidden="true"
        aria-labelledby="test-6-label"
        class="usa-input usa-date-picker__internal-input"
        style="display: none;"
        tabindex="-1"
      />
      <div
        class="usa-date-picker__wrapper"
      >
        <input
          aria-describedby="test-6-hint"
          aria-labelledby="test-6-label"
          class="usa-input usa-date-picker__external-input"
          id="test-6"
          name="test-6"
          type="text"
        />
        
    
        <button
          aria-haspopup="true"
          aria-label="Toggle calendar"
          class="usa-date-picker__button"
          type="button"
        />
        
    
        <div
          aria-modal="true"
          class="usa-date-picker__calendar"
          hidden=""
          role="dialog"
        />
        
    
        <div
          aria-live="polite"
          class="usa-sr-only usa-date-picker__status"
          role="status"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots primary datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-8"
      id="test-8-label"
    >
      test-8
    </label>
    <div
      class="usa-hint"
      id="test-8-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker usa-date-picker--initialized"
      data-max-date="false"
      data-min-date="0000-01-01"
    >
      <input
        aria-describedby="test-8-hint"
        aria-hidden="true"
        aria-labelledby="test-8-label"
        class="usa-input usa-date-picker__internal-input"
        style="display: none;"
        tabindex="-1"
      />
      <div
        class="usa-date-picker__wrapper"
      >
        <input
          aria-describedby="test-8-hint"
          aria-labelledby="test-8-label"
          class="usa-input usa-date-picker__external-input"
          id="test-8"
          name="test-8"
          type="text"
        />
        
    
        <button
          aria-haspopup="true"
          aria-label="Toggle calendar"
          class="usa-date-picker__button"
          type="button"
        />
        
    
        <div
          aria-modal="true"
          class="usa-date-picker__calendar"
          hidden=""
          role="dialog"
        />
        
    
        <div
          aria-live="polite"
          class="usa-sr-only usa-date-picker__status"
          role="status"
        />
      </div>
    </div>
  </div>
</div>
`;
